MAN-2240: Fix icons gap (#1298)
* MAN-2240: Fix System generated icon display issue on appointment page

* MAN-2240: Fixed failing test

--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -778,3 +778,21 @@ body.feature-disabled {
     margin: 0;
   }
 }
+
+.table-cell-link-content {
+  flex: 1;
+  min-width: 0;
+  max-width: 280px;
+}
+
+.table-cell-link-content a {
+  display: inline-block;
+  white-space: normal;
+  word-break: break-word;
+}
+
+.icon-container-right-aligned {
+  display: flex;
+  gap: 5px;
+  margin-left: auto;
+}
